All rights reserved.

1.1.5
-----
System
* default tuples
	* @true
	* @false
	
Commands
* general
	* more cleanup
* individual commands
	* db
		* -columnnames
		* bug: -bytes
	* file
		* change -pos BF to B
	* gensh
		* -strictPosix
		* gensh was generating bad documentary headers when passed plainwords.
    * record
    	* -create
    	* -getcontents
    	* -getfield
    	* -setcontents works more correctly
    * rs
        * -fileblob
        * -getblob
        * -lgetblob
        * -tofile
        * more destinations for blobs
    * tuple
    	* account for the variety of as400 classes
    	* -autonomic

Extensions
* general
	* some cleanup
* new
	* sysshep.qsys2.system_status.ublu
	* sysshep.qsys2.memory_pool.ublu
* updated
	* sysshep.qsys2.sysdiskstat.ublu
		* changed format
		
Examples
* fileAllBlobs.ublu

1.1.4 2016-11-04
-----
System
*   Debugger now handles autonomic variables

Commands
* general
	* minor fixes at Java level
	* major fixes to rs and db
* individual commands
    * num -bin
	* outq and printer rationalized
		* outq -get -getint -getfloat -getstring
		* outq removed superflous dash-commands
		* printer -getint -getfloat -getstring
	* rs & ftp bug in close deleting tuple fixed
	* rs
		* -bytes added
		* -close?? dash-commands  no longer delete tuple
		* -get -lget
		* -abs -rel -next
	* savesys
	
Extensions
* new
	* ux.printobj.ublu
	* sysshep directory
	
1.1.3 2016-10-14
System:
* Much refactoring at the Java level
* ublu.Ublu takes -include (i) switch and -silent (s) switch
* autonomic tuple variables
* save and restore const map
* ublu.util.Renderer
	* ObjectLockListEntry	

Commands:
* general
	* deprecate -instance in favor of -new
	* command descriptions cleaned up
	* some commands' argument parsing modernized
* individual commands	
	* const -list
	* db -json
	* IF now tests for null as well as not-true-not-false
	* ifs -fromfile
	* include -s (for -silent)
	* joblog command added
	* json command added
	* job -hold -release